--- a/base-cryptlib/pyproject.toml
+++ b/base-cryptlib/pyproject.toml
@@ -2,12 +2,12 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 [project]
-name = "example"
+name = "cryptlib"
 version = "0.0.1"
 authors = [
   { name="Cesar Ruano", email="cesar.ruanoalv@gmail.com" },
 ]
-description = "Descripton"
+description = "Asymetric encryption wrapper."
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
@@ -17,4 +17,4 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/"
+"Homepage" = "https://github.com/cesarruano/cryptlib"
